--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ nav {
     justify-content:center;
     align-items: center;
     flex-wrap: wrap;
-    margin-bottom: auto;
+    margin: 20px auto;
     padding:20px;
     background-image: url('img/fondo.jpg');
 }
